
      imginfo

 ** The function `graythresh' now returns a second value representing the
    ``goodness'' of the computed threshold value.

 ** The following functions have been deprecated (see their help text
    for the recommended alternatives):

      blkproc
      bmpwrite
      dilate
      erode

 ** With the new function `imbothat' the transform option of
    `imtophat' has been deprecated.

 ** The following functions have had been changed for bug fixes and/or
    improved matlab compatibility

      bweuler
      bwfill
      imhist
      conndef
      im2double
      im2uint8
      im2uint16
      isbw
      isgray
      isrgb
      isind
      mat2gray
      rgb2gray

 ** `rgb2gray' now also supports images of the class single and performs a
    weighted conversion to keep the image luminance instead of a the mean
    through each color.

 ** `imhist' is much more compatible with matlab and among other changes,
    it now uses the whole range of the class for the histogram rather than
    the minimum and maximum of the input image.

 ** `isbw' now defines a black-and-white image as a binary non-sparse
    matrix. This is compatible with matlab. To use the old behaviour,
    use the new option for the call "isbw (img, "non-logical").
    For backwards compatibility, if a non-logical matrix of 0 and 1 is
    used as input, `isbw' will still return true but a warning will be
    issued since this will deprecated later.

 ** `isgray' now also returns true for matrices of the int16 class.

 ** `isrgb' now returns false for logical matrix.

 ** `tiff_tag_read' had several bug fixes and can now check IFDs beyond
    the first. It can also accept mutiple tag values and IFDs simultaneously
    and return a matrix of the values found. Its documentation has been
    expanded (as well as an explanation of TIFF structure on the source)

 ** Package is now dependent on GNU Octave version 3.6.0 or later.

 ** Package is no longer automatically loaded.