@@ -53,6 +53,7 @@ Summary of important user-visible changes for image 1.1.0:
       bwfill
       imhist
       conndef
+      im2bw
       im2double
       im2uint8
       im2uint16
@@ -66,6 +67,9 @@ Summary of important user-visible changes for image 1.1.0:
  ** `rgb2gray' now also supports images of the class single and performs a
     weighted conversion to keep the image luminance instead of a the mean
     through each color.
+
+ ** `im2bw' now supports input images of the int16 class and deals better with
+    RGB images since it uses `rgb2gray' internally (see changes to rgb2gray).
 
  ** `imhist' is much more compatible with matlab and among other changes,
     it now uses the whole range of the class for the histogram rather than
